cmake_minimum_required(VERSION 4.2)
project(Tema-3-POO)

set(CMAKE_CXX_STANDARD 20)

add_executable(Tema-3-POO
        main.cpp
        Meniu.cpp
        CasaSmart.cpp
        DispozitivSmart.cpp
        BecRgb.cpp
        Termostat.cpp
        Televizor.cpp
        Frigider.cpp
        AerConditionat.cpp
)